# ConfFlow

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_EVALUATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  confflow.yaml  mypy.ini  output.txt  output_ascii.txt  pyproject.toml  setup.py  test.txt  verify_output.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage_push.yml  release.yml  scorecard.yml
chem_tasks_20260411_202144/: .config_hash  failed.xyz
chem_tasks_20260411_202144/backups/: A000001.err  A000001.gbw  A000001.inp  A000001.out  A000001.property.txt
confflow/: __init__.py  cli.py  confts.py  main.py
confflow/blocks/confgen/: __init__.py  collision.py  generator.py  mapping.py  validator.py
confflow/blocks/refine/: __init__.py  processor.py  rmsd_engine.py
confflow/blocks/viz/: __init__.py  report.py
confflow/calc/: __init__.py  analysis.py  api.py  artifacts.py  config_types.py  constants.py  core.py  geometry.py  manager.py  postprocess.py  rescue.py  resources.py  result_writer.py  run_services.py  runner.py  scan_ops.py  setup.py  step_contract.py  task_execution.py
confflow/calc/components/: executor.py  input_helpers.py  parser.py  task_runner.py
confflow/calc/db/: database.py
confflow/calc/policies/: __init__.py  base.py  gaussian.py  orca.py
confflow/config/: loader.py  models.py  schema.py
confflow/core/: __init__.py  chem_validation.py  console.py  contracts.py  data.py  exceptions.py  gaussian_input.py  io.py  keyword_rewrite.py  logging.py  models.py  pairs.py  path_policy.py  types.py  utils.py  validation.py
confflow/shared/: config_validation.py  defaults.py
confflow/workflow/: __init__.py  config_builder.py  config_show.py  dry_run.py  engine.py  export.py  helpers.py  presenter.py  rerun_failed.py  runtime_context.py  stats.py  step_handlers.py  task_config.py  task_config_constants.py  task_config_helpers.py  validation.py
docs/: ARCHITECTURE.md  ASSESSMENT.md  COMMAND_REFERENCE.md  COMPAT_EXECUTION_BOUNDARY.md  DEVELOPMENT.md  HANDOFF_PHASE2_WORKFLOW_CALC.md  KEYWORD_REFERENCE.md  PUBLIC_ALPHA.md  RELEASE.md  SECURITY_MODEL.md  STYLE_CONTRACT.md  TESTING.md  USAGE.md
docs/archive/: README.md
docs/internal/: COMPAT_EXECUTION_BOUNDARY.md  README.md
scripts/: test.sh
tests/: README.md  TEST_REPORT.md  __init__.py  _helpers.py  confflow.yaml  conftest.py  search.xyz  test_calc.py  test_calc_artifacts.py  test_calc_full.py  test_calc_manager_paths.py  test_calc_runner.py  test_cli.py  test_collision.py  test_collision_hotspots.py  test_confgen.py  test_confgen_refine_fallbacks.py  test_confgen_validator.py  test_config_models.py  test_config_show.py  test_confts_keyword.py  test_console.py  test_core.py  test_defaults.py  test_engine.py  test_export.py  test_geometry.py  test_input_helpers_hotspots.py  test_input_snapshot.py  test_io.py  test_loader.py  test_logging_hotspots.py  test_mapping.py  test_models.py  test_path_policy.py  test_policies.py  test_policies_hotspots.py  test_presenter.py  test_processor_hotspots.py  test_refine.py  (+15 more)
tests/artifacts/: traj.xyz
tests/coverage_push/: README.md  _helpers.py  test_analysis_and_viz_paths.py  test_calc_manager_paths.py  test_cli_and_confts_paths.py  test_confgen_refine_fallbacks.py  test_rescue_ts_scan_paths.py  test_task_runner_and_input_helpers_paths.py  test_workflow_engine_paths.py
