[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confflow"
version = "1.0"
description = "Automated molecular conformation search workflow engine for computational chemistry"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ConfFlow Team", email = "team@confflow.org"}
]
maintainers = [
    {name = "ConfFlow Team", email = "team@confflow.org"}
]
keywords = [
    "computational-chemistry",
    "molecular-dynamics",
    "conformational-search",
    "quantum-chemistry",
    "gaussian",
    "orca",
    "workflow"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "tqdm>=4.60.0",
    "pyyaml>=5.4.0",
    "psutil>=5.8.0",
    "jinja2>=3.0.0",
    "typing-extensions>=4.0.0",
    "rdkit>=2021.09.0",
    "numba>=0.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
    "types-PyYAML>=6.0.0",
    "pyright>=1.1.0",
]
viz = [
    "matplotlib>=3.3.0",
    "plotly>=5.0.0",
]
all = [
    "rdkit>=2021.09.0",
    "numba>=0.55.0",
    "matplotlib>=3.3.0",
    "plotly>=5.0.0",
]

[project.scripts]
confflow = "confflow.main:main"
confts = "confflow.confts:main"
confgen = "confflow.blocks.confgen:main"
confrefine = "confflow.blocks.refine:main"
confcalc = "confflow.calc.manager:main"

[project.urls]
Homepage = "https://github.com/user/confflow"
Documentation = "https://github.com/user/confflow#readme"
Repository = "https://github.com/user/confflow.git"
Issues = "https://github.com/user/confflow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["confflow*"]

[tool.setuptools.package-data]
confflow = ["*.yaml", "*.md"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
