[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confflow"
version = "1.0.10"
description = "Automated molecular conformation search workflow engine for computational chemistry"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ConfFlow Team"}
]
maintainers = [
    {name = "ConfFlow Team"}
]
keywords = [
    "computational-chemistry",
    "molecular-dynamics",
    "conformational-search",
    "quantum-chemistry",
    "gaussian",
    "orca",
    "workflow"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pyyaml>=5.4.0",
    "psutil>=7.2.2",
    "rich>=10.0.0",
    "pydantic>=2.13.3",
    "rdkit>=2021.09.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=26.3.1",
    "ruff>=0.8.0",
    "mypy>=1.20.2,<1.21",
    "types-PyYAML>=6.0.0",
]
# numba provides JIT acceleration; the code has a pure-Python fallback when absent
speed = [
    "numba>=0.55.0",
]
all = [
    "numba>=0.55.0",
]

[project.scripts]
confflow = "confflow.main:main"
confts = "confflow.confts:main"
confgen = "confflow.blocks.confgen:main"
confrefine = "confflow.blocks.refine:main"
confcalc = "confflow.calc.manager:main"

[project.urls]
Homepage = "https://github.com/moxuezhuchen/ConfFlow"
Documentation = "https://github.com/moxuezhuchen/ConfFlow#readme"
Repository = "https://github.com/moxuezhuchen/ConfFlow.git"
Issues = "https://github.com/moxuezhuchen/ConfFlow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["confflow*"]

[tool.setuptools.package-data]
confflow = ["*.yaml", "*.md"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D"]
# E501 (line-too-long) is intentionally delegated to black, which enforces the 100-char
# limit during formatting.  Enabling it here would produce duplicate/spurious warnings
# for long strings and URLs that black cannot auto-wrap.
# D100/D104 now enforced (module & package docstrings complete).
# D101-D107 (class/method/function/__init__/magic) deferred — see DEVELOPMENT.md.
ignore = ["E501", "B905", "D101", "D102", "D103", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
cache_dir = ".pytest_cache_temp"
markers = [
    "integration: end-to-end tests that exercise the full workflow",
]

[tool.coverage.run]
source = ["confflow"]
branch = true
data_file = ".coverage_temp"

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_also = [
    "@(numba\\.)?njit",
    "@(numba\\.)?jit",
]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
